# matchbox-keyboard

./: .gitignore  CMakeLists.txt  configure.ac
applet/: CMakeLists.txt
gtk-im/: CMakeLists.txt
layouts/: CMakeLists.txt  Makefile.am  keyboard-small.xml.in
src/: CMakeLists.txt  config-parser.c  config.h.in  matchbox-keyboard-key.c  matchbox-keyboard-ui.c
